# PV_circuit_model

./: .gitignore  .gitmodules  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
LT Spice Export/: a01_create_samples.py  a01b_create_blocks.py  a02_run_samples.py  a02b_run_all_samples_speed_test.py  a03_LT_Spice_Pmax_helper.py  export_ltspice.py  utilities.py
PV_Circuit_Model/: IV_jobs.cpp  IV_jobs.py  IV_jobs.pyx  __init__.py  cell.py  cell_analysis.py  circuit_model.py  data_fitting.py  data_fitting_tandem_cell.py  device.py  device_analysis.py  iterative_solver.py  iv_jobs_cython.pyx  ivkernal_python.py  ivkernel.cpp  ivkernel.h  ivkernel_python.py  ivkernel_wrapper.cpp  ivkernel_wrapper.pyx  measurement.py  module.py  multi_junction_cell.py  newton_solver.py  setup.py  setup_IV_jobs.py  setup_iv_jobs_cython.py  setup_ivkernel.py  utilities.py  utilities_silicon.py
TCP server/: tcp_server.py  tcp_server.spec
Tandem_Cell_Fit_Tools/: calibrate_to_tandem_tests.py  tandem_measurement.py  tcp_server.py
binder/: requirements.txt  start
docs/: examples.md  index.md
examples/: a00_run_all_examples.ipynb  a00_run_all_examples.py  a01_make_solar_cell.ipynb  a01_make_solar_cell.py  a02_make_PV_module.ipynb  a02_make_PV_module.py  a03_make_tandem_cell.ipynb  a03_make_tandem_cell.py  a04_fit_to_tandem_measurements.ipynb  a04_fit_to_tandem_measurements.py  a05_fit_to_topcon_cell_measurements.ipynb  a05_fit_to_topcon_cell_measurements.py
logo/: curve_stack_raw.pdn
tests/: a01_make_solar_cell.py  a01_result_2025-11-13_172418.pkl  a01_result_2025-12-04_111632.pkl  a01_result_2025-12-05_145734.pkl  config.json  (+27 more)
(+73 files in other folders)
